--- a/src/app/views/pages/editprofile/editprofile.component.html
+++ b/src/app/views/pages/editprofile/editprofile.component.html
@@ -26,14 +26,9 @@
       <input type="text" name="username" class="form-control" [(ngModel)]="user.username">
    </div></div>
 
-        <div class="form-check mb-3">
-          <input type="checkbox" class="form-check-input" id="exampleCheck2">
-          <label class="form-check-label" for="exampleCheck2">
-            Remember me
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary me-2">Submit</button>
-        <button class="btn btn-secondary">Cancel</button>
+
+        <button type="submit" class="btn btn-primary me-2">Enregistrer</button>
+        <button class="btn btn-secondary">Annuler</button>
       </form>
     </div>
   </div>
