--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -203,8 +203,8 @@
               <img class="wd-80 ht-80 rounded-circle" src="https://via.placeholder.com/80x80" alt="">
             </div>
             <div class="text-center">
-              <p class="tx-16 fw-bolder">Amiah Burton</p>
-              <p class="tx-12 text-muted">amiahburton@gmail.com</p>
+              <p class="tx-16 fw-bolder">Souid Houssem</p>
+              <p class="tx-12 text-muted">Souidhoussem@gmail.com</p>
             </div>
           </div>
           <ul class="list-unstyled p-1">
@@ -217,7 +217,7 @@
             <li class="dropdown-item py-2">
               <a  routerLink="edit" (click)="false" class="d-flex text-body ms-0">
                 <i class="feather icon-edit me-2 icon-md"></i>
-                <span>Edit Profile</span>
+                <span>Modifier Profile</span>
               </a>
             </li>
             <li class="dropdown-item py-2">
@@ -229,7 +229,7 @@
             <li class="dropdown-item py-2">
               <a href="" (click)="onLogout($event)" class="d-flex text-body ms-0">
                 <i class="feather icon-log-out me-2 icon-md"></i>
-                <span>Log Out</span>
+                <span>Se Deconnecter</span>
               </a>
             </li>
           </ul>
