--- a/src/app/views/pages/editprofile/editprofile.component.html
+++ b/src/app/views/pages/editprofile/editprofile.component.html
@@ -13,17 +13,17 @@
         <div class="form-group row">
           <label for="name" class="col-md-3 col-form-label text-md-right">{{item1}} :</label>
           <div class="col-md-6">
-          <input type="text" name="name" class="form-control" [(ngModel)]="user.name">
+          <input type="text" name="name" class="form-control" [(ngModel)]="name">
        </div></div>
        <div class="form-group row">
         <label for="name" class="col-md-3 col-form-label text-md-right">{{item2}} :</label>
         <div class="col-md-6">
-        <input type="text" name="email" class="form-control" [(ngModel)]="user.email">
+        <input type="text" name="email" class="form-control" [(ngModel)]="email">
      </div></div>
      <div class="form-group row">
       <label for="name" class="col-md-3 col-form-label text-md-right">{{item3}} :</label>
       <div class="col-md-6">
-      <input type="text" name="username" class="form-control" [(ngModel)]="user.username">
+      <input type="text" name="username" class="form-control" [(ngModel)]="username">
    </div></div>
 
         <div class="form-check mb-3">
