--- a/src/app/views/pages/edit-client/edit-client.component.html
+++ b/src/app/views/pages/edit-client/edit-client.component.html
@@ -1,1 +1,1 @@
-<app-editprofile [titre]="'edit Client'" [item1]="'Nom'" [item2]="'Email'" [item3]="'Telephone'" [typeItem]="1"></app-editprofile>
+<app-editprofile [titre]="'edit Client'" [item1]="'Adresse'" [item2]="'Nombre de voiture'" [item3]="'Telephone'" [typeItem]="1"></app-editprofile>
