--- a/src/app/views/pages/admin/listclient/listclient.component.html
+++ b/src/app/views/pages/admin/listclient/listclient.component.html
@@ -27,7 +27,7 @@
                 
                 <th>Adresse</th>
                 <th>Nombre de Voitures</th>
-                <th>Etat</th>
+                <th>Telephone</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -39,7 +39,7 @@
             
               <td>{{user.adresse}}</td>
               <td>{{user.nombreVoitures}}</td>
-              <td>{{user.etat}}</td>
+              <td>{{user.numTelephone}}</td>
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
                 <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>
