--- a/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
+++ b/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
@@ -44,7 +44,7 @@
                     Modifier
                   </a>
                 </button>
-                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove"></i>Supprimer</button>
+                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove" (click)="supprimer(chauffeur.id)"></i>Supprimer</button>
               </td>
               </tr>
 
