--- a/src/app/views/pages/admin/listvehicule/listvehicule.component.html
+++ b/src/app/views/pages/admin/listvehicule/listvehicule.component.html
@@ -78,15 +78,15 @@
                     <div class="card-body">
                       <div class="mb-3">
                         <label for="exampleInputPlaceholder" class="form-label">Modele</label>
-                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Enter Your Name">
+                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Modele">
                       </div>
                       <div class="mb-3">
                         <label for="exampleInputPlaceholder" class="form-label">Matricule</label>
-                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Enter Your Name">
+                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Matricule">
                       </div>
                       <div class="mb-3">
                         <label for="exampleInputPlaceholder" class="form-label">Couleur</label>
-                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Enter Your Name">
+                        <input type="text" class="form-control" id="exampleInputPlaceholder" placeholder="Couleur">
                       </div>
                       
                 </div>
