--- a/src/app/views/pages/editprofile/editprofile.component.html
+++ b/src/app/views/pages/editprofile/editprofile.component.html
@@ -27,7 +27,9 @@
    </div></div>
 
 
-        <button type="submit" class="btn btn-primary me-2">Enregistrer</button>
+        <button  class="btn btn-primary me-2"><a routerLink="/admin" type="button">
+        Enregistrer
+        </a></button>
         <button class="btn btn-secondary">Annuler</button>
       </form>
     </div>
