--- a/src/app/views/pages/admin/listclient/listclient.component.html
+++ b/src/app/views/pages/admin/listclient/listclient.component.html
@@ -47,7 +47,7 @@
                     Modifier
                   </a>
                 </button>
-                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove" (click)="supprimer(user.id)"></i>Supprimer</button>
+                <button  class="btn btn-sm btn-danger" (click)="supprimer(user.id)"> <i id="myicon3" class="fa fa-remove" ></i>Supprimer</button>
               </tr>
 
             </tbody>
