--- a/src/app/views/pages/admin/listvehicule/listvehicule.component.html
+++ b/src/app/views/pages/admin/listvehicule/listvehicule.component.html
@@ -43,7 +43,7 @@
                     Modifier
                   </a>
                 </button>
-                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove" (click)="supprimer(voiture.id)"></i>Supprimer</button>
+                <button  class="btn btn-sm btn-danger" (click)="supprimer(voiture.id)"> <i id="myicon3" class="fa fa-remove" ></i>Supprimer</button>
               </td>
               </tr>
 
