--- a/src/app/views/pages/editprofile/editprofile.component.html
+++ b/src/app/views/pages/editprofile/editprofile.component.html
@@ -27,10 +27,11 @@
    </div></div>
 
 
-        <button  class="btn btn-primary me-2"><a routerLink="/admin" type="button">
+        <button  class="btn btn-primary me-2">
         Enregistrer
-        </a></button>
-        <button class="btn btn-secondary">Annuler</button>
+        </button>
+        <button class="btn btn-secondary" (click)="annuler()">Annuler</button>
+      
       </form>
     </div>
   </div>
