--- a/src/app/views/pages/admin/listcamion/listcamion.component.html
+++ b/src/app/views/pages/admin/listcamion/listcamion.component.html
@@ -42,7 +42,7 @@
                     Modifier
                   </a>
                 </button>
-                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove" (click)="supprimer(camion.id)"></i>Supprimer</button>
+                <button  class="btn btn-sm btn-danger" (click)="supprimer(camion.id)"> <i id="myicon3" class="fa fa-remove" ></i>Supprimer</button>
               </td>
               </tr>
 
