--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -3,7 +3,9 @@
     <div class="card">
       <div class="row">
         <div class="col-md-4 pe-md-0">
-          <img url="https://www.facebook.com/messenger_media?thread_id=100028181055635&attachment_id=1232740134136762&message_id=mid.%24cAAAADOI2gtWHmmBKDGBaRq8s-IzQ" alt="The Image" width="128px" height="128px">
+          <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://cdn.discordapp.com/attachments/986742339005452332/986804445679607828/images_remoraupscaled.png)' }">
+
+          </div>
         </div>
         <div class="col-md-8 ps-md-0">
           <div class="auth-form-wrapper px-4 py-5">
