--- a/src/app/views/pages/client/geoclient/geoclient.component.scss
+++ b/src/app/views/pages/client/geoclient/geoclient.component.scss
@@ -1,10 +1,10 @@
 #mapclient{
   overflow:hidden;
-  padding-bottom:56.25%;
+  padding-bottom: 29.25%;
   position:relative;
   height:0;
   left:0;
-  top:0;
+  top:-81px;
   height:100%;
   width:100%;
   position:static;
