--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-4 pe-md-0">
-          <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://cdn.discordapp.com/attachments/986742339005452332/986804445679607828/images_remoraupscaled.png)' }">
+          <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://media.discordapp.net/attachments/937990478035570722/992150514949161110/unknown.png)' }">
 
           </div>
         </div>
