--- a/src/app/views/pages/auth/register/register.component.html
+++ b/src/app/views/pages/auth/register/register.component.html
@@ -70,7 +70,7 @@
 
              
               <div>
-                <button type="submit" class="btn btn-primary me-2 mb-2 mb-md-0" > S'inscrire
+                <button type="submit" class="btn btn-primary me-2 mb-2 mb-md-0" (click)="submit()"> S'inscrire
                 </button>
                
               </div>
