edit user profile

--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -215,7 +215,7 @@
               </a>
             </li>
             <li class="dropdown-item py-2">
-              <a  routerLink="edit" (click)="false" class="d-flex text-body ms-0">
+              <a  routerLink="/admin/editUserProfile/" (click)="false" class="d-flex text-body ms-0">
                 <i class="feather icon-edit me-2 icon-md"></i>
                 <span>Modifier Profile</span>
               </a>
