--- a/src/app/views/pages/edit-user-profile/edit-user-profile.component.html
+++ b/src/app/views/pages/edit-user-profile/edit-user-profile.component.html
@@ -30,9 +30,9 @@
           <div class="col-md-6">
             <input
               type="text"
-              name="oldp"
+              name="oldPassword"
               class="form-control"
-              [(ngModel)]="oldp"
+              [(ngModel)]="oldPassword"
             />
           </div>
         </div>
@@ -43,9 +43,9 @@
           <div class="col-md-6">
             <input
               type="text"
-              name="newp"
+              name="password"
               class="form-control"
-              [(ngModel)]="newp"
+              [(ngModel)]="password"
             />
           </div>
         </div>
