--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -195,12 +195,12 @@
       </li>
       <li class="nav-item nav-profile" ngbDropdown>
         <a class="nav-link" ngbDropdownToggle id="profileDropdown">
-          <img class="wd-30 ht-30 rounded-circle" src="https://via.placeholder.com/30x30" alt="profile">
+          <img class="wd-30 ht-30 rounded-circle" src="https://scontent.ftun16-1.fna.fbcdn.net/v/t39.30808-6/275417114_3241791546144852_5581031544389275396_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=3AYVzBphtqgAX_S1w5q&_nc_ht=scontent.ftun16-1.fna&oh=00_AT_kMv1P4VL6GkaAuEnryjbqwK2UcTT1z88co9LtramvGQ&oe=62C3A1F7" alt="profile">
         </a>
         <div ngbDropdownMenu class="px-0" aria-labelledby="profileDropdown">
           <div class="d-flex flex-column align-items-center border-bottom px-5 py-3">
             <div class="mb-3">
-              <img class="wd-80 ht-80 rounded-circle" src="https://via.placeholder.com/80x80" alt="">
+              <img class="wd-80 ht-80 rounded-circle" src="https://scontent.ftun16-1.fna.fbcdn.net/v/t39.30808-6/275417114_3241791546144852_5581031544389275396_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=3AYVzBphtqgAX_S1w5q&_nc_ht=scontent.ftun16-1.fna&oh=00_AT_kMv1P4VL6GkaAuEnryjbqwK2UcTT1z88co9LtramvGQ&oe=62C3A1F7" alt="">
             </div>
             <div class="text-center">
               <p class="tx-16 fw-bolder">Souid Houssem</p>
