--- a/src/app/views/pages/client/geoclient/geoclient.component.html
+++ b/src/app/views/pages/client/geoclient/geoclient.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-12 grid-margin">
       <div class="card">
         <div class="card-body">
-          <form (ngSubmit)="submit()" [formGroup]="form">
+          <form (ngSubmit)="submit()">
          
 
            
