--- a/src/app/views/pages/admin/listdemandes/listdemandes.component.html
+++ b/src/app/views/pages/admin/listdemandes/listdemandes.component.html
@@ -36,7 +36,7 @@
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
                 <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>Modifier</button>
-                <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove"></i>Supprimer</button>
+                <button  class="btn btn-sm btn-danger" (click)="supprimer(demande.id)"> <i id="myicon3" class="fa fa-remove" ></i>Supprimer</button>
               </td>
               </tr>
 
