--- a/src/app/views/pages/client/geoclient/geoclient.component.html
+++ b/src/app/views/pages/client/geoclient/geoclient.component.html
@@ -36,10 +36,10 @@
 
               <div class="row mb-3">
                 <div class="form-group">
-                <div class="col">
-                  <label class="form-label" >Lat:</label>
-                  <input class="form-control mb-4 mb-md-0" formControlName="latitude" type="text" name="latitude" >
-                </div>
+                  <div class="col-md-6">
+                    <label class="form-label" >Lat:</label>
+                    <input class="form-control" formControlName="Lat" name="Lat" type="text"   />
+                  </div>
               </div>
                 <div class="form-group">
                 <div class="col-md-6">
@@ -47,7 +47,24 @@
                   <input class="form-control" formControlName="longitude" name="longitude" type="text"   />
                 </div>
               </div>
-                
+              <div class="form-group">
+                <div class="col-md-6">
+                  <label class="form-label" >Num Telephone:</label>
+                  <input class="form-control" formControlName="Telephone" name="Telephone" type="text"   />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-6">
+                  <label class="form-label" >Type de Panne :</label>
+                  <input class="form-control" formControlName="Panne" name="Panne" type="text"   />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-6">
+                  <label class="form-label" >Nom :</label>
+                  <input class="form-control" formControlName="Nom" name="Nom" type="text"   />
+                </div>
+              </div>
              
             </div>
               <button type="submit"  class="btn btn-primary">Envoyer</button>
