--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -14,8 +14,8 @@
     <ul class="navbar-nav">
       <li class="nav-item" ngbDropdown>
         <a class="nav-link" ngbDropdownToggle id="languageDropdown" role="button">
-          <img src="assets/images/flags/us.svg" class="wd-20 me-1" title="us" alt="us">
-          <span class="fw-bold ms-1 me-1 d-none d-md-inline-block">English</span>
+          <img src="assets/images/flags/fr.svg" class="wd-20 me-1" title="us" alt="us">
+          <span class="fw-bold ms-1 me-1 d-none d-md-inline-block">Francais</span>
         </a>
         <div ngbDropdownMenu aria-labelledby="languageDropdown">
           <a ngbDropdownItem class="py-2"> <img src="assets/images/flags/us.svg" class="wd-20 me-1" title="us" alt="us"> <span class="ms-1"> English </span></a>
