--- a/src/app/views/pages/auth/register/register.component.html
+++ b/src/app/views/pages/auth/register/register.component.html
@@ -56,7 +56,7 @@
 
               <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Confirmer mot de passe</label>
-                <input type="text" formControlName="confirmPassword" name="confirmPassword" class="form-control"
+                <input type="password" formControlName="confirmPassword" name="confirmPassword" class="form-control"
                 placeholder="Entrer Mot de passe de confirmation" [ngClass]="{'is-invalid': submitted && f.confirmPassword.errors}">
 
                 <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
