--- a/src/app/views/pages/edit-user-profile/edit-user-profile.component.html
+++ b/src/app/views/pages/edit-user-profile/edit-user-profile.component.html
@@ -8,7 +8,7 @@
 <div class="col-md-6 grid-margin stretch-card">
   <div class="card">
     <div class="card-body">
-      <h6 class="card-title">Edit Profile</h6>
+      <h6 class="card-title">Modifier Profile</h6>
       <form (ngSubmit)="updateEmployee()" class="forms-sample">
         <div class="form-group row">
           <label for="name" class="col-md-3 col-form-label text-md-right"
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group row">
           <label for="name" class="col-md-3 col-form-label text-md-right"
-            >Old Password:</label
+            >Ancien mot de passe:</label
           >
           <div class="col-md-6">
             <input
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group row">
           <label for="name" class="col-md-3 col-form-label text-md-right"
-            >New Password:</label
+            >Nouveau mot de passe:</label
           >
           <div class="col-md-6">
             <input
