--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -45,7 +45,7 @@
               <div class="form-check mb-3">
                 <input type="checkbox" class="form-check-input" id="authCheck">
                 <label class="form-check-label" for="authCheck">
-                  Souviens- moi
+                 Se connecter automatiquement
                 </label>
               </div>
               <div>
