--- a/src/app/views/pages/client/geoclient/geoclient.component.html
+++ b/src/app/views/pages/client/geoclient/geoclient.component.html
@@ -34,19 +34,20 @@
                 
         
 
-              <div class="row mb-3">
+              <div class="row mb-3">$ 
+                <div class="form-group">
+                <div class="col-md-6">
+                  <label class="form-label" >Nom :</label>
+                  <input class="form-control" formControlName="Nom" name="Nom" type="text"   />
+                </div>
+              </div>
                 <div class="form-group">
                   <div class="col-md-6">
-                    <label class="form-label" >Lat:</label>
+                    <label class="form-label" >Adresse:</label>
                     <input class="form-control" formControlName="Lat" name="Lat" type="text"   />
                   </div>
               </div>
-                <div class="form-group">
-                <div class="col-md-6">
-                  <label class="form-label" >Long:</label>
-                  <input class="form-control" formControlName="longitude" name="longitude" type="text"   />
-                </div>
-              </div>
+          
               <div class="form-group">
                 <div class="col-md-6">
                   <label class="form-label" >Num Telephone:</label>
@@ -59,12 +60,7 @@
                   <input class="form-control" formControlName="Panne" name="Panne" type="text"   />
                 </div>
               </div>
-              <div class="form-group">
-                <div class="col-md-6">
-                  <label class="form-label" >Nom :</label>
-                  <input class="form-control" formControlName="Nom" name="Nom" type="text"   />
-                </div>
-              </div>
+             
              
             </div>
               <button type="submit"  class="btn btn-primary">Envoyer</button>
